<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>demo1</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="lx@todo.todo">lx</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclcpp</depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
